--- a/index.html
+++ b/index.html
@@ -1,12 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Haute École d'Informatique</title>
+    <title>Haute École d'Informatique-HEI</title>
+    <link rel="shortcut icon" href="assets/hei_logo.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    
+    <nav>
+        <img src="assets/hei_logo.png" alt="Logo de la Haute École d'Informatique" class="hei_logo">
+        <ul class="navbar">
+            <li class="link1" id="active">ACCUEIL</li>
+            <li class="link2">MISSION</li>
+            <li class="link3">ACTUALITES</li>
+            <li class="link4">BOURSES</li>
+            <li class="link5">INSCRIPTION</li>
+            <li class="link6">R&D</li>
+            <li class="intranet_link">INTRANET</li>
+        </ul>
+    </nav>
+    <main>
+        <div class="title">Haute École d'Informatique</div>
+        <div class="main_p">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui ex quidem molestias
+            dignissimos fuga blanditiis mollitia itaque ducimus dicta recusandae, veniam officia quis excepturi
+            veritatis suscipit deserunt laudantium deleniti. Officiis.</div>
+
+        <div class="ctas">
+            <a href="" class="cta1">Inscrivez-vous ici</a>
+            <a href="" class="cta2">Resultat selection</a>
+            <a href="" class="cta3">Programme Pedagogique</a>
+        </div>
+
+        <a href="" class="habilitaion">Habilitaion MESuPRES, suivant l'arrete n°31309/2023</a>
+    </main>
+
 </body>
+
 </html>
